# cpp-snippets

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  multi_invoke_visitor.cpp  multi_invoke_visitor.h  pointer_to_member.cpp  pointer_to_member.h  snippets_abstract_base_class.cpp  snippets_abstract_base_class.h  snippets_multi_invoke_visitor.cpp  snippets_multi_invoke_visitor.h  snippets_pointer_to_member.cpp  snippets_pointer_to_member.h  snippets_scope_guard.cpp  snippets_scope_guard.h  snippets_scott_meyers_singleton.cpp  snippets_scott_meyers_singleton.h  snippets_type_traits.cpp  snippets_type_traits.h
tests/: CMakeLists.txt  abstract_base_class.t.cpp  multi_invoke_visitor.t.cpp  pointer_to_member.t.cpp  scope_guard.t.cpp  scott_meyers_singleton.t.cpp
